<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/exFiveAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activityToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="預約日期" />
    </com.google.android.material.appbar.AppBarLayout>
    <View
        android:id="@+id/lineTop2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="18dp"
        android:background="@color/blue_800"
        app:layout_constraintTop_toBottomOf="@id/exFiveAppBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/monthYearText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        tools:text="2025年 11月"
        app:layout_constraintTop_toBottomOf="@id/lineTop2"
        app:layout_constraintBottom_toTopOf="@id/lineTop"/>




    <View
        android:id="@+id/lineTop"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="18dp"
        android:background="@color/blue_800"
        app:layout_constraintTop_toBottomOf="@id/monthYearText"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lineTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

            <TextView
                android:id="@+id/Sunday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Sunday"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/Monday"/>

            <TextView
                android:id="@+id/Monday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Monday"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/Sunday"
                app:layout_constraintEnd_toStartOf="@id/Tuesday"/>

            <TextView
                android:id="@+id/Tuesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Tuesday"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/Monday"
                app:layout_constraintEnd_toStartOf="@id/Wednesday"/>

            <TextView
                android:id="@+id/Wednesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Wednesday"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/Tuesday"
                app:layout_constraintEnd_toStartOf="@id/Thursday"/>

            <TextView
                android:id="@+id/Thursday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Thursday"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/Wednesday"
                app:layout_constraintEnd_toStartOf="@id/Friday"/>

            <TextView
                android:id="@+id/Friday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Friday"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/Thursday"
                app:layout_constraintEnd_toStartOf="@id/Saturday"/>

            <TextView
                android:id="@+id/Saturday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Saturday"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/Friday"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/lineBelow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="18dp"
        android:background="#10E2CB"
        app:layout_constraintTop_toBottomOf="@id/main2"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.kizitonwose.calendar.view.CalendarView
        android:id="@+id/exFiveCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lineBelow"
        app:cv_dayViewResource="@layout/calendar_day_layout"
        app:cv_outDateStyle="endOfGrid" />


<!--    <com.kizitonwose.calendar.view.CalendarView-->
<!--        android:id="@+id/calendarView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:cv_dayViewResource="@layout/calendar_day_layout"-->
<!--        app:layout_constraintTop_toBottomOf="@id/lineBelow"-->
<!--        tools:layout_editor_absoluteX="0dp" />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="365dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/item_view" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FAB"
        style="?attr/floatingActionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        app:srcCompat="@drawable/baseline_add_24"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />







</androidx.constraintlayout.widget.ConstraintLayout>